<?xml version="1.0"?>
<package format="3">
  <name>dq_operations</name>
  <version>0.0.0</version>
  <description>The dq_operations package</description>

  <maintainer email="bastien.mourin@sigma-clermont.fr">Bastien Mourin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>Eigen3</depend>
  <depend>orocos_kdl</depend>

  <export>
  </export>
</package>

